<resources>

    <string name="app_name">Robot App Sample</string>
    <string name="sdk_info">SDK Sample</string>
    <string name="basic_scene">Basic scene</string>
    <string name="navigation">Navigation</string>
    <string name="basic_sport">Basic Motion</string>
    <string name="visual_ability">Visual ability</string>
    <string name="speech_ability">Speech ability</string>
    <string name="audio_ability">audio ability</string>
    <string name="electric_door_control">electric door control</string>
    <string name="body_follow">Body Follow</string>
    <string name="exit">Exit</string>

    <string name="start_lead_text">Start navigation</string>
    <string name="stop_lead_text">End navigation</string>
    <string name="lead_text">Lead</string>
    <string name="map_location_text">Map/Position</string>
    <string name="charge_text">Charge</string>
    <string name="lead_hint_point">Reception point</string>
    <string name="lead_tips_text">Notice:Before Lead,Make sure the location exist</string>
    <string name="back_text">Back</string>
    <string name="clear_screen">Clear</string>
    <string name="recovery_screen">RCVY</string>
    <string name="output_result">Result:</string>
    <string name="speech_hint_text">Play text/Query text</string>

    <string name="speech_play">Play</string>
    <string name="speech_stop">Stop</string>
    <string name="speech_query">Query</string>
    <string name="sport_forward">Forward</string>
    <string name="sport_back">Back</string>
    <string name="sport_turn_left">Left</string>
    <string name="sport_turn_right">Right</string>
    <string name="sport_turn_up">Up</string>
    <string name="sport_turn_down">Down</string>
    <string name="sport_stop">Stop</string>
    <string name="sport_start">start</string>
    <string name="sport_head">Head</string>
    <string name="sport_body">Body</string>

    <string name="vision_register">Register</string>
    <string name="vision_find">Find Face</string>
    <string name="vision_un_register">Unregister</string>
    <string name="vision_warning">Warning:Due to legal restrictions, the registration API is not developed in regions other than China. You may need Google or MS related services to implement the face registration function </string>
    <string name="vision_warning2">No api to delete person at the moment</string>
    <string name="charge_desc">If you want to \"Leaving Charge Dock\", you have to \"disable auto-charge\" before robot start charge</string>
    <string name="connect_failed">Your sdk init failed<br/><br/> Make sure launch this app from Home Launcher!<br/><br/> 你的SDK初始化失败了<br/>请确保从应用中心启动此程序。</string>

    <string name="location_reception">Is in reception point?</string>
    <string name="location_init_point">Init Position</string>
    <string name="location_is_estimate">Is estimate</string>
    <string name="location_set_reception">Set reception point</string>
    <string name="location_get_point">Get Point</string>
    <string name="location_remove_point">Del Point</string>
    <string name="getname">getname</string>

    <string name="navigation_stop">Stop</string>
    <string name="navigation_resume_direction">Resume Direction</string>


    <string name="charge_disable">Disable Auto-Charge</string>
    <string name="charge_enable">Enable Auto-Charge</string>
    <string name="charge_auto_start">Go Charge</string>
    <string name="charge_auto_stop">Stop go charge</string>
    <string name="charge_stop_leave">Leaving Charge Dock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="positioning_spot">Positioning Point</string>
    <string name="charging_point">Charging Point</string>
    <string name="charging_pole">Charging Pole</string>
    <string name="get_place_fail">R.string.get_place_fail</string>
    <string name="stand_by_spot">Stand-by Point</string>
    <string name="reception_point">Reception Point</string>
    <string name="do_not_move_robot">Please don\'t move the robot</string>
    <string name="starting_progress">Creating Map, Please Wait…</string>
    <string name="go_navigation">Go Navigation?</string>
    <string name="sure_go_navigation">Are you sure to navigation %s?</string>
    <string name="cancel_txt">Cancel</string>
    <string name="confirm_txt">Confirm</string>
    <string name="forbid_line_explain">\"No-go line has been added\" or \"No need to add\". Please tap \"Save\".</string>

    <string name="open_first_door">Open first door</string>
    <string name="close_first_door">Close first door</string>
    <string name="open_second_door">Open second door</string>
    <string name="close_second_door">Close second door</string>
    <string name="open_all_door">Open all door</string>
    <string name="close_all_door">Close all door</string>
    <string name="get_door_status">Get the door status</string>
    <string name="start_body_follow">Start body following</string>
    <string name="stop_body_following">Stop body following</string>
    <string name="navigation_query_pass_gate_status">Query Pass Gate Status</string>
    <string name="navigation_please_wait">In progress, please wait…</string>
    <string name="navigation_navigation_point">Navigation Point</string>
    <string name="navigation_gate_entrance_name">Gate entrance name</string>
    <string name="navigation_gate_exit_name">Gate exit name</string>
    <string name="arm_control_back">← Back</string>
    <string name="arm_control_title">Robotic arm control</string>
    <string name="arm_control_angle">Angle:</string>
    <string name="arm_control_state_title">State:</string>
    <string name="arm_control_state_ready">Ready</string>
    <string name="arm_control_speed">Speed:</string>
    <string name="arm_control_relative_movement">Relative movement (based on slider angle)</string>
    <string name="arm_control_left_arm">Left arm</string>
    <string name="arm_control_right_arm">Right arm</string>
    <string name="arm_control_both_arms">Both arms</string>
    <string name="arm_control_absolute_position">Absolute position (move to a specified angle)</string>
    <string name="arm_control_reset_to_30">Reset to -30°</string>
    <string name="arm_control_reset_to_default_position">Reset to the default position (vertical).</string>
    <string name="arm_control_reset_left_arm">Reset left arm</string>
    <string name="arm_control_reset_right_arm">Reset right arm</string>
    <string name="arm_control_reset_both_arms">Reset both arms</string>
    <string name="arm_control_query_location">Query location</string>
    <string name="arm_control_query_left_arm">Query left arm</string>
    <string name="arm_control_query_right_arm">Query right arm</string>
    <string name="arm_control_realtime_monitoring">Real-time monitoring</string>
    <string name="arm_control_start_monitoring">Start monitoring</string>
    <string name="arm_control_stop_monitoring">Stop monitoring</string>
    <string name="arm_control_emergency_stop">Emergency stop</string>
    <string name="arm_control_stop_left_arm">Stop left arm</string>
    <string name="arm_control_stop_right_arm">Stop right arm</string>
    <string name="arm_control_stop_both_arms">Stop both arms</string>

</resources>
